# coasts

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.coast-service  Dockerfile.coast-service.dev  Makefile  README.md  cli-update-policy.json  dev_setup.sh
.github/workflows/: ci.yml  release.yml  update-policy.yml
coast-cli/: Cargo.toml
coast-cli/src/: lib.rs  main.rs
coast-cli/src/commands/: assign.rs  build.rs  builds.rs  cert.rs  daemon.rs  docker.rs  doctor.rs  exec.rs  lookup.rs  ls.rs  mod.rs  nuke.rs  remote.rs  run.rs  ui.rs  update.rs
coast-core/src/: artifact.rs  compose.rs  lib.rs
coast-daemon/: Cargo.toml  build.rs
coast-daemon/src/: analytics.rs  bare_services.rs  dns.rs  docker_watcher.rs  git_watcher.rs  lib.rs  main.rs  port_manager.rs  remote_stats.rs  server.rs  shared_services.rs
coast-docker/: Cargo.toml
coast-docker/src/: compose.rs  compose_build.rs  container.rs  dind.rs  host.rs  lib.rs  network.rs  podman.rs  remote.rs  sysbox.rs
coast-guard/: package-lock.json  package.json  vite.config.ts
coast-guard/scripts/: generate-docs.mjs
coast-guard/src/: App.tsx
coast-remote/: Cargo.toml  Dockerfile  POC.md  setup-remote.sh
coast-remote/src/: docker.rs  main.rs  routes.rs  state.rs  sync.rs
coast-remote/test-harness/: Dockerfile.local  docker-compose.yml  entrypoint-local.sh  entrypoint-remote.sh  run-test.sh  run-tests.sh
coast-service/: Cargo.toml  README.md  REMOTE_SPEC.md
coast-service/src/: lib.rs  main.rs  port_manager.rs  reconcile.rs  server.rs
coast-service/src/handlers/: assign.rs  container_stats.rs  exec.rs  logs.rs  mcp.rs  mod.rs  prune.rs  ps.rs  restart_services.rs  rm.rs  run.rs  secret.rs  service_control.rs  start.rs  stop.rs
coast-service/src/state/: instances.rs  mod.rs
coast-update/src/: updater.rs
dev/: coast-service-entrypoint.sh
dindind/: README.md  integration-runner.sh  integration.yaml  matrix.sh  run.sh
dindind/lib/: base.Dockerfile  coast-wrapper.sh  entrypoint.sh  integration.Dockerfile  test-local-build.sh
docs/: GETTING_STARTED.md  README.md  SKILLS_FOR_HOST_AGENTS.md  VIDEO_TUTORIALS.md  doc_ordering.txt  installation_prompt.txt  skills_prompt.txt
docs/coastfiles/: PROJECT.md  SHARED_SERVICES.md  WORKTREE_DIR.md
docs/concepts_and_terminology/: ASSIGN.md  BARE_SERVICES.md  (+16 more)
integrated-examples/: README.md  helpers.sh  projects.txt  setup.sh  test_agent_shell.sh  test_assign.sh  test_bare_services.sh  test_build_target.sh  test_coastd_process_singleton.sh  test_fish_install.sh  test_lookup.sh  test_mcp.sh  test_mixed_assign.sh  test_multi_project.sh  test_private_paths_assign.sh  test_update.sh
memory/: feedback_contract_safety.md
search-indexes/: docs-search-index-en.json  docs-search-index-es.json  docs-search-index-ja.json  docs-search-index-ko.json  docs-search-index-pt.json  docs-search-index-ru.json  docs-search-index-zh.json
translation-state/: state.json
(+521 files in other folders)
