[package]
name = "coast-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "coast_cli"
path = "src/lib.rs"

[[bin]]
name = "coast"
path = "src/main.rs"

[[bin]]
name = "coast-dev"
path = "src/bin/coast-dev.rs"

[dependencies]
coast-core = { path = "../coast-core" }
coast-i18n = { path = "../coast-i18n" }
coast-update = { path = "../coast-update" }
rust-i18n = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
colored = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
bollard = { workspace = true }
nix = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
