[package]
name = "coast-remote"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "coast-remote"
path = "src/main.rs"

[dependencies]
coast-core = { path = "../coast-core" }
coast-docker = { path = "../coast-docker" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
bollard = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
